crates/cli/tests/snapshots/run_system_test__system_windows__caching__creates_run_state_cache.snap
---
source: crates/cli/tests/run_system_test.rs
expression: "fs::read_to_string(fixture.path().join(format!(\".moon/cache/hashes/{}.json\",\n                state.hash))).unwrap()"
---
[
  {
    "command": "cmd.exe",
    "args": [
      "./outputs.bat",
      "/c",
      "/q"
    ],
    "deps": {},
    "envVars": {},
    "inputs": {
      ".moon/workspace.yml": "c448710a2eaaec20fe6897f6d62d1e77f39edf4e",
      "windows/cwd.bat": "f97d5bfb654f63a59a4158e4969707c8e1c29ece",
      "windows/echo.bat": "cf9137992257ec89c223a5d866458a94a361e0fd",
      "windows/envVars.bat": "af068672f8e5f2ca1aa1b5fec93df8fb253bdd0c",
      "windows/envVarsMoon.bat": "f378867c19344c38e6587248c9a6b1643b49bbca",
      "windows/exitNonZero.bat": "8204ab8df26ed8af772def3d3701a0df93d81ebe",
      "windows/exitZero.bat": "0cc40242e00650f6cf05f8c523f5e9afb268fb1f",
      "windows/moon.yml": "4ed9b777bf245c05de077d64f4e82812d86c6dcc",
      "windows/outputs.bat": "df7bd8b019bf17a024f17dadcff7e9b2cdfdb471",
      "windows/passthroughArgs.bat": "f00267f81c05165ee19da2c5940bc06e39217b61",
      "windows/standard.bat": "3cbc31ab39b138c232a071378b428ff015de8dae"
    },
    "outputs": [
      "file.txt",
      "folder"
    ],
    "projectDeps": [],
    "target": "windows:outputs",
    "version": "1"
  },
  {
    "version": "1"
  }
]
