crates/cli/tests/snapshots/run_system_test__system_windows__caching__uses_cache_on_subsequent_runs-2.snap
---
source: crates/cli/tests/run_system_test.rs
expression: get_assert_output(&assert)
---
▪▪▪▪ windows:outputs
▪▪▪▪ windows:outputs (100ms, eaa75056)

Tasks: 1 completed
 Time: 100ms



